# SatDump

./: .gitignore
.cache/clangd/index/: 252_s16.c.4A2B7956B6B05148.idx  252_s16.c.59EC4D70964C47B8.idx  336_s16.c.7FE61107937D8606.idx  336_s16.c.D416BBDDA0209C5B.idx  384_s16.c.3EF2D79D9560BEAD.idx  384_s16.c.CFDCBD423D2D575F.idx  504_s16.c.653B90C767EB142A.idx  504_s16.c.8E3D0ABFCC2B8A16.idx  504_s8.c.1E2BF5B489BA8F05.idx  504_s8.c.3999610086CB529F.idx  BIT_STRING.c.3C9BBFAEE7E0D861.idx  BIT_STRING.c.5A5ADBD68FC4A003.idx  BIT_STRING.h.297D64170F865A0F.idx  BIT_STRING.h.A4A0460BCFAEAF00.idx  BOOLEAN.c.ACA508FDC4734B68.idx  BOOLEAN.c.B79B52B96CAE798A.idx  BOOLEAN.h.35C881A6F0D0C148.idx  BOOLEAN.h.40B4DC0248C6F7E6.idx  Bitlevel.h.C45B01E628A93CDD.idx  Bitlevel.h.FAAB7344781F7957.idx  CACCoder.cpp.0A744650DD80A503.idx  CACCoder.cpp.30F32DDE3FE72E54.idx  CACCoder.h.01353F2F73A59830.idx  CACCoder.h.CF71538F6B9C70E9.idx  CACDecoder.cpp.D800E288EC4E77D6.idx  CACDecoder.cpp.FE6CBCD951810836.idx  CACDecoder.h.379D6B05F20F7350.idx  CACDecoder.h.4BF6D328DAEFC971.idx  CACModel.cpp.10AEE179D97B0BDD.idx  CACModel.cpp.185299F5EB0D9F63.idx  (+4532 more)
pipelines/: Analysis.json  GOES.json
plugins/: CMakeLists.txt
plugins/analysis_plugin/: main.cpp
plugins/analysis_support/: CMakeLists.txt  main.cpp
plugins/analysis_support/analysis/: module_analysis_psk.cpp  module_analysis_psk.cpp.back  module_analysis_psk.h  module_analysis_work.cpp  module_analysis_work.h
src-core/common/: utils.cpp  utils.h
src-core/products/: image_products.cpp  image_products.h
src-testing/: main.cpp
(+13 files in other folders)
